Hopping to fix overflow issue

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -69,6 +69,7 @@ main {
   margin: 0 auto;
   padding: 0 1rem;
   min-height: 80vh;
+  overflow-x: hidden;
 }
 
 h1 {
